versioned_docs/version-4.1.x/reference/functions/Remove-ADTFileFromUserProfiles.mdx
---
id: Remove-ADTFileFromUserProfiles
title: Remove-ADTFileFromUserProfiles
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Removes one or more items from each user profile on the system.

## SYNTAX

### Path

```powershell
Remove-ADTFileFromUserProfiles [-Path] <String[]> [-Recurse] [-ExcludeNTAccount <String[]>]
 [-ExcludeDefaultUser] [-IncludeSystemProfiles] [-IncludeServiceProfiles] [-WhatIf] [-Confirm]
 [<CommonParameters>]
```

### LiteralPath

```powershell
Remove-ADTFileFromUserProfiles [-LiteralPath] <String[]> [-Recurse] [-ExcludeNTAccount <String[]>]
 [-ExcludeDefaultUser] [-IncludeSystemProfiles] [-IncludeServiceProfiles] [-WhatIf] [-Confirm]
 [<CommonParameters>]
```

## DESCRIPTION

This function removes one or more items from each user profile on the system.
It can handle both wildcard paths and literal paths.
If the specified path does not exist, it logs a warning instead of throwing an error.
The function can also delete items recursively if the Recurse parameter is specified.
Additionally, it allows excluding specific NT accounts, system profiles, service profiles, and the default user profile.

## EXAMPLES

### EXAMPLE 1

```powershell
Remove-ADTFileFromUserProfiles -Path "AppData\Roaming\MyApp\config.txt"
```

Removes the specified file from each user profile on the system.

### EXAMPLE 2

```powershell
Remove-ADTFileFromUserProfiles -Path "AppData\Local\MyApp" -Recurse
```

Removes the specified folder and all its contents recursively from each user profile on the system.

## PARAMETERS

### -Path

Specifies the path to append to the root of the user profile to be resolved.
The value of Path will accept wildcards.
Will accept an array of values.

```yaml
Type: String[]
Parameter Sets: Path
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### -LiteralPath

Specifies the path to append to the root of the user profile to be resolved.
The value of LiteralPath is used exactly as it is typed; no characters are interpreted as wildcards.
Will accept an array of values.

```yaml
Type: String[]
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Recurse

Deletes the files in the specified location(s) and in all child items of the location(s).

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -ExcludeNTAccount

Specify NT account names in Domain\Username format to exclude from the list of user profiles.

```yaml
Type: String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ExcludeDefaultUser

Exclude the Default User.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -IncludeSystemProfiles

Include system profiles: SYSTEM, LOCAL SERVICE, NETWORK SERVICE.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -IncludeServiceProfiles

Include service profiles where NTAccount begins with NT SERVICE.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf

Shows what would happen if the cmdlet runs.
The cmdlet is not run.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Confirm

Prompts you for confirmation before running the cmdlet.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### None

### This function does not generate any output.
## NOTES
An active ADT session is NOT required to use this function.

This function supports the -WhatIf and -Confirm parameters for testing changes before applying them.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2026 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Remove-ADTFileFromUserProfiles](https://psappdeploytoolkit.com/docs/reference/functions/Remove-ADTFileFromUserProfiles)
